# crawlrec

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
crawlrec/: cli.py  extractor.py  rec.js  recorder.py  utils.py
